Restructure after being misled by ChatGPT

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Check version consistency
       run: |
-        VERSION_FROM_XML=$(xmlstarlet sel -t -v "/extension/version" articletextfilter.xml)
+        VERSION_FROM_XML=$(xmlstarlet sel -t -v "/extension/version" plugin/articletextfilter.xml)
         VERSION_FROM_UPDATE=$(xmlstarlet sel -t -v "/updates/update/version" plg_content_articletextfilter-update.xml)
         GIT_TAG="${GITHUB_REF#refs/tags/}"
         if [ "v$VERSION_FROM_XML" != "$GIT_TAG" ]; then
@@ -42,7 +42,8 @@ jobs:
 
     - name: Package the plugin
       run: |
-        zip -r ${ZIP_BASENAME}-${TAG_NAME}.zip plugin articletextfilter.xml
+      	cd plugin
+        zip -r ../${ZIP_BASENAME}-${TAG_NAME}.zip -x '*~' *
 
     - name: Create Release with asset
       uses: ncipollo/release-action@v1
@@ -52,7 +53,7 @@ jobs:
     - name: Update manifest
       run: |
         # Extract version from plugin.xml
-        VERSION_FROM_XML=$(xmlstarlet sel -t -v "/extension/version" articletextfilter.xml)
+        VERSION_FROM_XML=$(xmlstarlet sel -t -v "/extension/version" plugin/articletextfilter.xml)
   
         # Update update.xml
         xmlstarlet ed --inplace \
